[package]
name = "musemap"
version = "0.2.0-alpha.0"
edition = "2021"
rust-version = "1.77.0"
authors = ["K--Aethiax"]

description = "Fast DoS-resistant hashmap."

documentation = "https://docs.rs/musemap"
repository = "https://github.com/eternal-io/musemap"
license = "MIT OR Apache-2.0"
readme = "README.md"

keywords = ["hash", "hasher", "hashmap", "museair"]
categories = ["algorithms"]

include = ["src/**"]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
